force-app/main/default/objects/Loan_Version__c/fields/Discount_Fee__c.field-meta.xml
<CustomField>
    <fullName>Discount_Fee__c</fullName>
    <label>Discount Fee %</label>
    <length>70</length>
    <type>Text</type>
</CustomField>