force-app/main/default/objects/Loan_Version__c/fields/Discount_Fee_Number__c.field-meta.xml
<CustomField>
    <fullName>Discount_Fee_Number__c</fullName>
    <label>Discount Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>