force-app/main/default/objects/Loan_Version__c/fields/Early_Lock_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Early_Lock_Deposit__c</fullName>
    <label>Early Lock Deposit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>